# no-transformer-

./: .gitignore  architecture.md  cli.py  config.yaml  map.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
engines/: base.py  green_symbolic.py  red_synthesis.py  yellow_retrieval.py
knowledge/: README.md
knowledge/empirical/: empirical.yaml
knowledge/formal/: formal.yaml
knowledge/interpretive/: interpretive.yaml
pipeline/: confidence.py  config.py  contradiction.py  decomposition.py  domain_classifier.py  features.py  feedback.py  fusion.py  intent_classifier.py  knowledge_graph.py  orchestrator.py  query_processing.py  reasoning_rules.py  router.py  schemas.py
tests/: test_config.py  test_decomposition.py  test_engines.py  test_feedback.py  test_knowledge_graph.py  test_orchestrator.py  test_query_processing.py  test_reasoning_rules.py  test_schemas.py
training/: colab_train.ipynb  expand_dataset.py  make_dataset.py
training/datasets/: domains.csv  domains_auto.csv  epistemic.csv  feedback.csv  intents.csv  intents_auto.csv  qa_pairs.csv
